--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css} "/>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
@@ -10,8 +10,16 @@
 
 </head>
 <body>
-here is a store page
+<nav th:insert="fragments/navbar :: nav_fragment"></nav>
+<br/>
+<br/>
+<br/>
+<div class="container">
+    <div class="bg-warning">
+        Here is a store page
+    </div>
+</div>
 
-
+<footer th:insert="fragments/footer :: footer_fragment"></footer>
 </body>
 </html>
